--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "./node_modules/gh-pages/bin/gh-pages-clean.js && gh-pages -d build -e tic-tac-toe",
+    "gh-pages-help": "gh-pages --help"
   },
   "eslintConfig": {
     "extends": [
