--- a/ant/package.json
+++ b/ant/package.json
@@ -2,6 +2,7 @@
   "name": "ant",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://roannav.github.io/react-learn/ant",
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preddeploy": "npm run build",
+    "deploy": "./node_modules/gh-pages/bin/gh-pages-clean.js && gh-pages -d build -e ant",
+    "gh-pages-help": "gh-pages --help"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
